--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -1,8 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap");
+
 main {
   margin: 0;
   padding: 0;
 }
+
 .editar2 {
   font-family: "Roboto", sans-serif;
   display: flex;
@@ -10,16 +12,21 @@ main {
   align-items: center;
   height: 100vh;
 }
+
 .container {
   padding: 2rem;
   border-radius: 10px;
   min-width: 30%;
   overflow: auto;
+  background: rgb(11,111,230);
+  background: radial-gradient(circle, rgba(11,111,230,0.9976365546218487) 99%, rgba(9,85,131,1) 100%);
 }
+
 h1 {
   margin-bottom: 1rem;
   text-align: center;
 }
+
 .container form {
   display: flex;
   flex-direction: column;
@@ -32,6 +39,7 @@ h1 {
   color: red;
   display: none;
 }
+
 inputs {
   padding: 8px 5px;
   outline: none;
@@ -42,12 +50,15 @@ inputs {
 
 p {
   margin-bottom: 0;
+  font-weight: bold;
 }
+
 .box-selected {
   display: flex;
   justify-content: space-evenly;
   font-weight: bold;
 }
+
 button[type="submit"] {
   padding: 1rem;
   font-size: 1rem;
