--- a/css/stile.css
+++ b/css/stile.css
@@ -55,6 +55,7 @@ nav {
   body {
     overflow-x: hidden;
   }
+
   .nav-list {
     position: absolute;
     top: 8vh;
@@ -67,11 +68,14 @@ nav {
     justify-content: space-around;
     transform: translateX(100%);
     transition: transform 0.3s ease-in;
+    z-index: 11;
   }
+
   .nav-list li {
     margin-left: 0;
     opacity: 0;
   }
+
   .mobile-menu {
     display: block;
   }
@@ -86,6 +90,7 @@ nav {
     opacity: 0;
     transform: translateX(50px);
   }
+
   to {
     opacity: 1;
     transform: translateX(0);
@@ -110,29 +115,36 @@ footer {
   background: #444;
   display: flex;
 }
+
 footer .box {
   width: 320px;
   min-height: 150px;
   padding: 20px;
 }
+
 footer .box:only-child(4) {
   width: 400px;
 }
+
 .box h2 {
   color: #fff;
   margin-bottom: 20px;
 }
+
 .box ul li {
   margin: 10px 0px;
   list-style: none;
 }
+
 .box ul li a {
   color: #ddd;
   text-decoration: none;
 }
+
 .box ul li a:hover {
   color: #fff;
 }
+
 .box p {
   color: #fff;
   text-align: justify;
