--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -13,7 +13,7 @@ main {
   height: 100vh;
 }
 
-.container {
+.container1 {
   padding: 2rem;
   border-radius: 10px;
   min-width: 30%;
@@ -27,7 +27,7 @@ h1 {
   text-align: center;
 }
 
-.container form {
+.container1 form {
   display: flex;
   flex-direction: column;
   gap: 10px;
